[package]
name = "cs"
version = "0.1.0"
authors = ["Zack H <zphixon@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.7.3"
tiny_http = "0.6"
chrono = "0.4.11"
#ureq = { version = "2.1.1", features = ["json"] }
url = '*'
serde_json = '*'
reqwest = { version = "0.11.3", features = ["blocking", "json"] }
serde = { version = "*", features = ["derive"] }
dashmap = "4.0.2"
lazy_static = "1.4.0"
#serde_json = "1.0.64"
#tokio = { version = "1", features = ["full"] }
#hyper = { version = '0.14', features = ["full"] }
