[package]
name = 'cs'
version = '0.2.0'
authors = ['Zack H <zphixon@gmail.com>']
edition = '2021'

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = '0.8.5'
rocket = { version = '0.5.0-rc.2', features = ['json'] }
once_cell = '1.10.0'
chrono = '0.4.19'
dashmap = '5.3.2'
serde = { version = '*', features = ['derive'] }
reqwest = { version = '0.11.10', features = ['json', 'blocking'] }
